2011-02-13 John Wu <John dot Wu at ACM dot org>
	* src/bundles.cpp: replace all calls to ibis::util::logMessage
	with LOGGER macro, add some status messages in the constructors of
	ibis::bundle and derivatives
	* src/fileManager.cpp: add log messages whenever storage::m_begin
	is 0

2011-02-12 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp: add statement to indicate initialization
	has completed in two constructors of storage object to aid
	debugging of memory leak related to check-sq1
	* src/colValues.cpp: add try-catch block around array->resize in
	the constructors
	* src/util.h: add template classes ibis::util::refHolder and
	ibis::util::guardObj0, template function ibis::util::ref and
	ibis::util::ojbectGuard
	* src/bundle.cpp: add try-catch block to clear resource in case
	the constructors of bundle1 and bundles encounter exceptions.
	These objects hold pointers that are lost in case of the
	constructors receive exceptions.  This should be the root cause of
	the problem with check-sq0, check-sq1 and check-sq2.

2011-02-11 John Wu <John dot Wu at ACM dot org>
	* src/query.cpp: expand the function getNumHits to compute the
	number of hits if there are certain inexpensive options
	* tests/Makefile.am: add check-sq0 to reduce the amount of time
	needed by more-check

2011-02-10 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp: modify bitvector::setBit to decompress the
	bitmap if the bit to be changed is in the middle of a fairly long
	object

2011-02-09 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp: in ibis::bin::setBoundaries avoid casting bounds
	to floats

2011-02-08 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: change part::doCount to use column::getValuesArray
	instead of directly attempting to read the underlying data files
	* src/ibin.cpp: take into account of the total cost in
	bin::estimate, do nothing if the total cost is higher than
	scanning the base data

2011-01-28 John Wu <John dot Wu at ACM dot org>